fixed about layout issue and started styling

--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@
 
 .nav {
     position: fixed;
-    width: 100%;
+    right: 20px;
     top: 300px;
     z-index: 1;
 }
@@ -38,7 +38,7 @@
 .contact {
     display: flex;
     justify-content: flex-end;
-    padding-right: 20px;
+
     text-decoration: none;
 }
 
@@ -67,7 +67,7 @@ main {
 
 /* PROJECTS STYLING */
 .project-wrapper {
-    margin: 80px;
+    margin: 50px 80px;
 }
 
 .project-title,
@@ -103,7 +103,7 @@ main {
     flex-flow: row wrap;
     justify-content: center;
     gap: 50px;
-    padding: 80px;
+    margin: 50px 80px;
     color: #A6A29F;
 }
 
@@ -123,18 +123,36 @@ main {
     margin: 8px;
 }
 
-
 /* ABOUT STYLING */
-.about {
-    margin: 0px 80px;
+.about-wrapper {
+    margin: 50px 80px;
     padding-bottom: 80px;
+    display: inline-block;
+}
+
+.about-text,
+.about-image {
+    display:inline-block;
+    width: 50%;
+    vertical-align:middle;
 }
 
 .about-image {
     background: url("../images/profile-about.jpg");
     background-position: center;
     background-size: cover;
+    margin-top: 20px;
     width: 600px;
     height: 400px;
     border-radius: 10px;
+}
+
+.about-text {
+    padding-left: 50px;
+    color: #A6A29F;
+    text-align: center;
+}
+
+.accent-text {
+    color: #AB7B79;
 }
